Bug 434911 - Dolphin opens two tabs if tabs are disabled
Summary: Dolphin opens two tabs if tabs are disabled
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-03-24 23:33 UTC by Yan
Modified: 2021-03-27 19:03 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yan 2021-03-24 23:33:43 UTC
SUMMARY


STEPS TO REPRODUCE
1. Settings -> initial state -> uncheck "Open new fodlers in tabs"
2. run "dolphin ~/Downloads"
3. Two tabs are opened!

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2021-03-25 18:58:29 UTC
Did you have the Downloads folder already open the last time you closed Dolphin, and in settings window > Startup, do you have the "Show on startup" setting set to "Folders, tabs, and window state from last time"?

If so, this is a known issue that will be fixed when https://invent.kde.org/system/dolphin/-/merge_requests/189 is merged.
Comment 2 Yan 2021-03-26 22:40:17 UTC
Yes to both, then let's wait for merge
Comment 3 Nate Graham 2021-03-27 01:39:48 UTC
Great!
Comment 4 Nate Graham 2021-03-27 19:03:03 UTC
Git commit 175538020824355115cd98637ce83ecc53badd44 by Nate Graham.
Committed on 27/03/2021 at 01:38.
Pushed by ngraham into branch 'release/21.04'.

Don't re-open already-open URLs when using session-restore feature

If Dolphin would be asked to open a location that is already open, don't
open it again in a new tab; instead switch to that view. Supports tabs
and split view.
FIXED-IN: 21.04

M  +18   -6    src/dolphintabwidget.cpp

https://invent.kde.org/system/dolphin/commit/175538020824355115cd98637ce83ecc53badd44